# shortlister

./: .gitignore  01.ipynb  README.md  candidate.pkl  candidate1.pkl  candidate2.pkl  controller.py  keycapture.py  main.py  model.py  pyproject.toml  requirements.txt  test.py  view.py
.github/workflows/: python-tests.yml
notebooks/: 01.ipynb  Untitled-1.ipynb  memo.txt  to-do-list
shortlister/: controller.py  main.py  model.py  notebook.ipynb  requirements.txt  tournament.py  view.py  web.py
source_code/: controller.py  main.py  view.py
src/shortlister/: controller.py  main.py  model.py  tournament.py  view.py  web.py
test_role/: criteria.csv
tests/: test.py  test_basic.py  test_controller.py  test_model.py  test_tournament.py
